apps/minecraft/sync.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ais-minecraft
