apps/minecraft/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minecraft-gateway
  namespace: minecraft
spec:
  gatewayClassName: traefik
  listeners:
    - name: minecraft-port
      protocol: TCP
      port: 25565
      allowedRoutes:
        kinds:
          - kind: TCPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft-route
  namespace: minecraft
spec:
  parentRefs:
    - name: minecraft-gateway
      sectionName: minecraft-port
  rules:
    - backendRefs:
      - name: mc-server-minecraft
        port: 25565
